NOCC 0.9.4	??   ??, 2001

	* Messages are now translated  from the charset in the mail headers to 
	  the charset choosen at login time. 


NOCC 0.9.3	March 12, 2001

	* Fixed a bug with Postfix when "strict_rfc821_envelopes = yes".
	* Fixed replying to someone with a name containing accent (bug #133573).
	* Better display of text/plain messages.
	* Fixed bug with Netscape 4.x which prevented to send attachement.
	* HTML code is now XHTML 1.0 Transitional compliant.
	  (NB: nl2br() is not XHTML compliant when using PHP < 4.0.5)
	* Added support for themes.
	* Added navigation between messages.
	* If sender is empty, NOCC displays '[unknown]'.
	* Added Russian (Win, Unix & ISO), Slovenian, Swedish, Danish, Polish
	  and Taiwan Chinese translations.
	* Fix for flawed PHP install bundled with RedHat 7 (RH bug #24933).
	* Images with transparency are now in GIF. Fixes Netscape problems
	  with transparent PNG.
	* Moved <? to <?php, better compatibility when short tags are disabled. 


NOCC 0.9.2	February 08, 2001
	
	* now handle multiple attachments when sending message (adding and
	  deleting attachments is now possible).
	* Attachments are preserved when replying to, transfering a message.
	* The 'New' column isn't displayed anymore when accessing a POP3 server. 
	* New translations (portuguese, dutch, arabic and spanish)
	  However, as more features came in, some items aren't translated yet.
	* Fixed a bug which prevented correct parsing of RFC822 message.
	* Added displaying of text/plain attachements inline.
	* Fixed bug where one couldn't log in if the password contained "\".
	* Improved speed for parsing messages (both for the inbox display
	  and the message display itself).
	* Improved the display of HTML and TEXT messages.
	* Fixed a bug with mail with no body and attachments.
	* A lot of minor debugging.


NOCC 0.9.1	December 01, 2000

	* Added PHP and IMAP lib version initial checking.
	* Fixed language problem with Amaya.